--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -51,5 +51,4 @@ $color-mod: #00b500;
 //
 $color-progress-completed: #378059;
 $color-progress-expected: rgba(#FAC05E, .4);
-
-$font-default: "Ubuntu", "Lato", "Open Sans", sans-serif;
+$font-default: 'Ubuntu', 'Lato', 'Open Sans', sans-serif;
