--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -1,119 +1,114 @@
 
 #page table td {
   &:first-child {
-	input[type="submit"] {
+	input[type='submit'] {
 	  margin: 1rem 0 0;
 	}
   }
 
-  input[type="submit"] {
+  input[type='submit'] {
 	margin: 0;
   }
 }
-
 
 input,
 .input,
 textarea,
 select,
 .checkbox {
-  font-family: $font-default;
-  background: rgba($color-secondary, .4);
-  border: 1px solid rgba($color-primary, .5);
-  box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
   color: $color_text;
+  font-family: $font-default;
   font-size: 1rem;
-  height: 1.5rem;
-  transition: ease all .3s;
-  display: inline-block;
   vertical-align: middle;
+  display: inline-block;
+  background: rgba($color-secondary, .4);
+  height: 1.5rem;
+  border: 1px solid rgba($color-primary, .5);
   border-radius: 3px;
+  box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
+  transition: ease all .3s;
 
   &:focus {
-	outline: none;
 	border: 1px solid $color-primary !important;
+	outline: none;
   }
 }
 
-
-input[type="radio"] {
+input[type='radio'] {
+  display: block;
   background: rgba($color-secondary, .4) !important;
+  width: .8rem;
+  height: .8rem;
   border: 1px solid rgba($color-primary, .5);
-  box-shadow: inset 0 2px 4px 2px rgba(#000, .4) !important;
-  vertical-align: -.5rem;
-  appearance: none;
-  display: inline-block;
-  width: 1.5rem;
-  height: 1.5rem;
   border-radius: 50%;
+  box-shadow: inset 0 2px 4px 2px rgba(#000, .4) !important;
+  margin: 0 .5rem 0 0;
   position: relative;
+  appearance: none;
 
   &:checked {
 	&:after {
-	  position: absolute;
-	  content: "";
-	  height: 1rem;
-	  width: 1rem;
+	  content: '';
 	  background: $color-primary;
-	  box-shadow: inset 0 2px 4px 2px rgba(#000, .5);
+	  width: .5rem;
+	  height: .5rem;
 	  border-radius: 50%;
-	  left: .175rem;
-	  top: .175rem;
+	  box-shadow: inset 0 2px 4px 2px rgba(#000, .5);
+	  position: absolute;
+	  top: 50%;
+	  left: 50%;
+	  transform: translate(-50%, -50%);
 	}
   }
 }
 
-
 option {
+  color: $color-text;
   font-family: $font-default;
   background: $color-background !important;
   border: 1px solid rgba($color-primary, .5);
   box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
-  color: $color-text;
 }
 
-
-input[type="text"],
-input[type="number"],
-input[type="email"],
-input[type="password"] {
-  padding: .25rem;
+input[type='text'],
+input[type='number'],
+input[type='email'],
+input[type='password'] {
   color: $color_text;
+  padding: .25rem;
   background: rgba($color-secondary, .4);
   border: 1px solid rgba($color-primary, .5);
   box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
 }
 
-
-input[type="checkbox"] {
-  position: relative;
+input[type='checkbox'] {
   vertical-align: -0.25rem;
+  background: rgba($color-secondary, .4);
+  width: 1rem;
+  height: 1rem;
+  border: 1px solid rgba($color-primary, .5);
+  outline: none;
+  box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
+  position: relative;
+  cursor: pointer;
+  transition: .3s;
   -webkit-appearance: none;
   -moz-appearance: none;
   -o-appearance: none;
   appearance: none;
-  width: 1rem;
-  height: 1rem;
-  background: rgba($color-secondary, .4);
-  border: 1px solid rgba($color-primary, .5);
-  box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
-  cursor: pointer;
-  outline: none;
-  transition: .3s;
 
   &:checked::before {
-	display: block;
-	content: '\2714';
-	font-weight: bold;
 	color: $color-primary;
 	font-size: 1.2rem;
+	font-weight: bold;
+	content: '\2714';
+	display: block;
 	position: absolute;
 	top: -.5rem;
   }
 }
 
-
-input[type="checkbox"],
+input[type='checkbox'],
 select,
 table.mceEditor tr td select.mceSelectList {
   color: $color_text;
@@ -122,17 +117,14 @@ table.mceEditor tr td select.mceSelectList {
   box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
 }
 
-
 .checkbox > input:active {
   border: 1px solid $color-primary;
 }
 
-
 textarea {
-  min-height: 5rem;
   padding: .5rem 1rem;
+  min-height: 5rem;
 }
-
 
 .mceEditorIframe {
   min-height: 150px;
