--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -1,18 +1,14 @@
-
-
 /* Remove most template background images
    -------------------------------------------------------*/
 body, .pages, #top, #logo, #tnav, #bar_manual, #bar_support, #bar_portal, #bar_forums, #bar_logout, #bar_login, #bar_signup, #menu_top, .menu_grp, #menu_overview, #menu_preferences, #menu_logout, #menu_bottom, #header, #header_planet, #header_mail, #header_news, #header_tick, #header_metal, #header_crystal, #header_eonium, #header_asteroids, #header_value, #header_xp, #header_score, #header_rank, #planet_summary_construction, #planet_summary_research, #planet_summary_production, #planet_summary_footer, #contents_header, #contents_information, .container, #contents_footer, #tab_links, #footer, #important_messages_contents_header, #important_messages_contents_footer, #page_manual .entries, #page_manual .entry_sep, #entry_search {
   background: none;
 }
 
-
 /* Remove fixed dimensions from elements where necessary
    -------------------------------------------------------*/
 .pages, #page, #logo, #tnav, #bar_manual, #bar_support, #bar_portal, #bar_forums, #bar_login, #bar_logout, #contents_header, #contents_information, .container, #header_planet, #menu, .menu_grp, .menu_grp li, #time_loaded, #header, #planet_summary, #tab_links, .research_current, .research_next, .construction_info, .construction_build, .scan_info, .training_info, .scan_action, .training_info .resources li, .training_info .resources li .textvalue, .scan_action, .training_amounts, #security_redundancy_form table, #production_form table .resources li .textvalue, .production_orders table, #full_page, #bcalc, #my_bcalcs, .forum_thread_actions {
   width: auto !important;
 }
-
 
 #logo, #tnav,
 .tnav_link a,
@@ -21,18 +17,15 @@ body, .pages, #top, #logo, #tnav, #bar_manual, #bar_support, #bar_portal, #bar_f
   height: auto;
 }
 
-
 #page, #contents {
-  min-height: auto;
   padding-bottom: 0;
+  min-height: auto;
 }
-
 
 //remove annoying pabox from login page:
 div#page_login + div + div + div + div#pabox_wrapper {
   display: none;
 }
-
 
 /* Standard Elements
    -------------------------------------------------------*/
@@ -41,32 +34,27 @@ div#page_login + div + div + div + div#pabox_wrapper {
   float: none !important;
 }
 
-
 html {
   font-size: 14px;
 }
 
-
 html,
 body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
-
 
 body {
   font-size: $text-default;
 }
-
 
 body,
 p,
 input {
   color: $color-offwhite;
 }
-
 
 body,
 p,
@@ -78,63 +66,56 @@ input {
   line-height: 1.4;
 }
 
-
 body {
   background-color: $color-background;
 }
 
-
 p {
-  margin: 0;
   padding: 0 1rem .5rem;
+  margin: 0;
 }
-
 
 th {
   font-size: $text-small;
   text-transform: uppercase;
 }
 
-
 option {
-  background-color: $color-secondary !important;
   color: $color-text !important;
+  background-color: $color-secondary !important;
 }
-
 
 hr {
-  background: rgba($color-primary, .5);
-  border: none;
-  height: 1px;
   display: none;
+  background: rgba($color-primary, .5);
+  height: 1px;
+  border: none;
 }
-
 
 /* Page Outline
    -------------------------------------------------------*/
 #page {
-  position: relative;
+  padding: 3rem .5rem 0;
+  display: grid;
   width: 100%;
   max-width: 90rem;
-  padding: 3rem .5rem 0;
   margin: 0 auto;
-  display: grid;
+  position: relative;
   grid-template-columns: 12rem 2fr 1fr;
   grid-template-rows: auto 1fr 1rem;
   grid-column-gap: 1rem;
   @include respond-below(sm) {
-    grid-template-columns: 100px auto;
-    grid-template-rows: 165px auto auto;
-    grid-row-gap: 0;
-    padding: 0;
-    max-width: 100vw;
+	padding: 0;
+	max-width: 100vw;
+	grid-template-columns: 100px auto;
+	grid-template-rows: 165px auto auto;
+	grid-row-gap: 0;
   }
 
   .maintext {
-    padding: 8px 0;
+	padding: 8px 0;
   }
 }
-
 
 /* OTHER
    ---------------------------------*/
@@ -142,16 +123,13 @@ hr {
   color: $color-gc;
 }
 
-
 .moc {
   color: $color-moc;
 }
 
-
 .mod {
   color: $color-mod;
 }
-
 
 .mow {
   color: $color-mow;
@@ -161,17 +139,15 @@ hr {
   color: orange;
 }
 
-
 #important_messages_contents {
-  width: 80%;
-  background: $color-secondary !important;
-  border: 0;
   color: $color-text;
-  padding: .25rem .5rem;
   white-space: initial;
+  padding: .25rem .5rem;
+  background: $color-secondary !important;
+  width: 80%;
+  border: 0;
   box-shadow: 3px 3px 5px 0 rgba(#000, .4);
 }
-
 
 #message_form {
   width: 60rem;
@@ -179,105 +155,101 @@ hr {
   margin: 0 auto;
 
   p {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap;
+	display: flex;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	justify-content: center;
 
-    &:nth-child(1) {
-      display: flex;
-      justify-content: center;
-    }
+	&:nth-child(1) {
+	  display: flex;
+	  justify-content: center;
+	}
 
-    &:nth-child(2),
-    &:nth-child(3) {
-      display: flex;
-      justify-content: space-between;
-    }
+	&:nth-child(2),
+	&:nth-child(3) {
+	  display: flex;
+	  justify-content: space-between;
+	}
 
-    #to {
-      display: inline-block;
-      margin-left: 4rem;
-    }
+	#to {
+	  display: inline-block;
+	  margin-left: 4rem;
+	}
 
-    #subject {
-      padding: 0 .75rem;
-      text-align: left;
-      display: inline-block;
-      margin-left: 1.7rem;
-      width: calc(100% - 6rem);
-    }
+	#subject {
+	  text-align: left;
+	  padding: 0 .75rem;
+	  display: inline-block;
+	  width: calc(100% - 6rem);
+	  margin-left: 1.7rem;
+	}
 
-    #message_body {
-      padding: .5rem .75rem;
-      text-align: left;
-      display: inline-block;
-      vertical-align: -14rem;
-      width: calc(100% - 6rem) !important;
-      margin-left: 1.1rem;
-      height: 15rem;
-    }
+	#message_body {
+	  text-align: left;
+	  vertical-align: -14rem;
+	  padding: .5rem .75rem;
+	  display: inline-block;
+	  width: calc(100% - 6rem) !important;
+	  height: 15rem;
+	  margin-left: 1.1rem;
+	}
 
-    #charsleft {
-      display: block;
-      text-align: center !important;
-      margin: 0 auto .5rem;
-      width: 100%;
-      font-size: $text-small;
-    }
+	#charsleft {
+	  font-size: $text-small;
+	  text-align: center !important;
+	  display: block;
+	  width: 100%;
+	  margin: 0 auto .5rem;
+	}
 
-    input[type="submit"] {
-      margin: 0 auto;
-      color: black;
+	input[type='submit'] {
+	  color: black;
+	  margin: 0 auto;
 
-      &:hover {
-        color: $color-primary;
-      }
-    }
+	  &:hover {
+		color: $color-primary;
+	  }
+	}
   }
 
   br {
-    display: none;
+	display: none;
   }
 
   + p {
-    font-size: $text-small;
-    text-align: center !important;
+	font-size: $text-small;
+	text-align: center !important;
   }
 }
-
 
 #page_alliance #notice + .container .header {
   display: none;
 }
 
-
 .important_message {
   .title {
-    display: block;
-    padding: .5rem;
-    font-size: 1rem;
-    background: $color-secondary;
-    color: $color-text;
-    //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
+	color: $color-text;
+	font-size: 1rem;
+	padding: .5rem;
+	display: block;
+	background: $color-secondary;
+	//background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
   }
 
   .time {
-    display: block;
-    font-size: $text-small;
-    margin: .25rem .5rem 1rem;
+	font-size: $text-small;
+	display: block;
+	margin: .25rem .5rem 1rem;
   }
 
   p {
-    margin: .5rem;
+	margin: .5rem;
   }
 }
-
 
 #page_journal #notice + .container .header {
   display: none;
 }
-
 
 .input_coords {
   width: 1.6rem;
