--- a/scss/components/_login_support_manual_stats.scss
+++ b/scss/components/_login_support_manual_stats.scss
@@ -5,27 +5,27 @@
 #page_manual {
   #header,
   #nav {
-    display: none;
+	display: none;
   }
 
   #page {
-    display: initial;
-    max-width: 100%;
-    margin: 0;
-    padding: 0;
+	padding: 0;
+	display: initial;
+	max-width: 100%;
+	margin: 0;
   }
 
   #header {
-    height: 6.5rem;
+	height: 6.5rem;
   }
 
   #tnav {
-    margin: -2.25rem .5rem 0;
+	margin: -2.25rem .5rem 0;
   }
 
   #contents_header,
   #contents_footer {
-    display: none;
+	display: none;
   }
 }
 
@@ -40,253 +40,253 @@
 #page_login,
 #page_support {
   #contents {
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
+	display: grid;
+	grid-template-columns: 1fr auto 1fr;
 
-    .header {
-      height: 2rem;
-    }
+	.header {
+	  height: 2rem;
+	}
   }
 
   .container {
-    grid-column: 2 / 3;
+	grid-column: 2 / 3;
   }
 
-  input[type="submit"] {
-    display: block;
-    margin: 0 auto 1rem;
+  input[type='submit'] {
+	display: block;
+	margin: 0 auto 1rem;
   }
 }
 
 #page_login {
   #header,
   #nav {
-    display: none;
+	display: none;
   }
 
   #contents {
-    max-width: 400px;
-    position: fixed;
-    top: 20%;
-    left: 50%;
-    transform: translateX(-50%);
+	max-width: 400px;
+	position: fixed;
+	top: 20%;
+	left: 50%;
+	transform: translateX(-50%);
 
-    .header {
-      display: none;
-    }
+	.header {
+	  display: none;
+	}
 
-    form.login label, #page_support form label {
-      font-size: $text-small;
-      text-transform: uppercase;
-      width: 80%;
-      margin: 0 auto;
-    }
+	form.login label, #page_support form label {
+	  font-size: $text-small;
+	  text-transform: uppercase;
+	  width: 80%;
+	  margin: 0 auto;
+	}
 
-    .maintext {
-      padding: 1rem;
-      background: $color-secondary;
-      border-radius: .5rem;
-      border: 1px solid rgba($color-primary, .5);
-      box-shadow: inset 0 0 8px 2px rgba(#000, .25), 1px 8px 30px 3px rgba(#000, .3);
+	.maintext {
+	  padding: 1rem;
+	  background: $color-secondary;
+	  border: 1px solid rgba($color-primary, .5);
+	  border-radius: .5rem;
+	  box-shadow: inset 0 0 8px 2px rgba(#000, .25), 1px 8px 30px 3px rgba(#000, .3);
 
-      p:last-child {
-        display: none;
-      }
-    }
+	  p:last-child {
+		display: none;
+	  }
+	}
   }
 
   .container {
-    border-radius: .5rem;
+	border-radius: .5rem;
 
-    .header:first-child {
-      margin-top: 0;
-    }
+	.header:first-child {
+	  margin-top: 0;
+	}
 
-    form {
-      width: 100%;
+	form {
+	  width: 100%;
 
-      &.login {
-        text-align: center;
+	  &.login {
+		text-align: center;
 
-        input[type="submit"] {
-          margin: 0 auto 1rem;
-        }
+		input[type='submit'] {
+		  margin: 0 auto 1rem;
+		}
 
-        .g-recaptcha {
-          margin: 0 auto 18px;
-          display: table;
-        }
-      }
+		.g-recaptcha {
+		  display: table;
+		  margin: 0 auto 18px;
+		}
+	  }
 
-      input:not([type="submit"]) {
-        width: 80%;
-        margin: 0 auto 1rem;
-      }
-    }
+	  input:not([type='submit']) {
+		width: 80%;
+		margin: 0 auto 1rem;
+	  }
+	}
   }
 }
 
-#page_support ~ div[id^="pabox"],
-#page_manual ~ div[id^="pabox"],
+#page_support ~ div[id^='pabox'],
+#page_manual ~ div[id^='pabox'],
 #support + p {
   display: none;
 }
 
 #page_support {
   form {
-    label {
-      width: 100%;
-    }
+	label {
+	  width: 100%;
+	}
 
-    input:not([type="submit"]),
-    select {
-      width: 100%;
-      margin: 0 auto 1rem;
-      color: $color-text;
-    }
+	input:not([type='submit']),
+	select {
+	  color: $color-text;
+	  width: 100%;
+	  margin: 0 auto 1rem;
+	}
 
-    textarea {
-      width: 100%;
-      min-width: 35rem;
-      min-height: 15rem;
-      margin-bottom: 1rem;
-    }
+	textarea {
+	  width: 100%;
+	  min-width: 35rem;
+	  min-height: 15rem;
+	  margin-bottom: 1rem;
+	}
   }
 }
 
 #page_manual {
   #contents {
-    display: grid;
-    grid-template-columns: 12rem minmax(12rem, 60rem) 1fr;
-    grid-column-gap: .5rem;
+	display: grid;
+	grid-template-columns: 12rem minmax(12rem, 60rem) 1fr;
+	grid-column-gap: .5rem;
   }
 
   #menu {
-    margin: .5rem 0 .5rem .5rem;
-    grid-column: 1 / 2;
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
+	margin: .5rem 0 .5rem .5rem;
+	grid-column: 1 / 2;
 
-    li {
-      margin: 0;
+	li {
+	  margin: 0;
 
-      a {
-        font-size: 0.75rem;
-      }
-    }
+	  a {
+		font-size: 0.75rem;
+	  }
+	}
 
-    .entry_sep {
-      display: block;
-      margin: .5rem 0 .5rem;
-      //border-top: 1px solid rgba($color-primary, .5);
-      border-top: 1px solid transparent;
-      border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, 0.5) 100%);
-      border-image-slice: 1;
-    }
+	.entry_sep {
+	  display: block;
+	  border-top: 1px solid transparent;
+	  //border-top: 1px solid rgba($color-primary, .5);
+	  border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, 0.5) 100%);
+	  border-image-slice: 1;
+	  margin: .5rem 0 .5rem;
+	}
 
-    #entry_search + .entry_sep + .entries {
-      display: none;
-    }
+	#entry_search + .entry_sep + .entries {
+	  display: none;
+	}
 
-    #entry_search {
-      form {
-        margin: 0;
-        width: auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+	#entry_search {
+	  form {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		width: auto;
+		margin: 0;
 
-        br {
-          display: none;
-        }
+		br {
+		  display: none;
+		}
 
-        input {
-          width: calc(100% - 8px);
-          max-width: none;
+		input {
+		  width: calc(100% - 8px);
+		  max-width: none;
 
-          &[type="submit"] {
-            margin-top: 4px;
-          }
-        }
-      }
-    }
+		  &[type='submit'] {
+			margin-top: 4px;
+		  }
+		}
+	  }
+	}
   }
 
   .entries a {
-    font-weight: normal;
-    margin-left: .5rem;
-    text-indent: -0.5rem;
+	font-weight: normal;
+	text-indent: -0.5rem;
+	margin-left: .5rem;
   }
 
-  input[type="text"] {
-    max-width: 10.5rem;
+  input[type='text'] {
+	max-width: 10.5rem;
   }
 
-  span[style="font-size: 13pt;"] {
-    display: block;
-    font-size: 1.5rem !important;
-    border-bottom: 1px solid rgba($color-primary, .5);
+  span[style='font-size: 13pt;'] {
+	font-size: 1.5rem !important;
+	display: block;
+	border-bottom: 1px solid rgba($color-primary, .5);
   }
 
-  span[style="font-size: 12pt;"] {
-    display: block;
-    font-size: 1.15rem !important;
-    margin-bottom: 0;
+  span[style='font-size: 12pt;'] {
+	font-size: 1.15rem !important;
+	display: block;
+	margin-bottom: 0;
   }
 
-  span[style="color: lime;"] {
-    color: $color-text !important;
-    font-size: $text-small;
-    margin-left: 1rem;
-    padding-left: .5rem;
-    border-left: 5px solid $color-negative;
-    text-transform: uppercase;
-    /* font-weight: bold; */
+  span[style='color: lime;'] {
+	color: $color-text !important;
+	font-size: $text-small;
+	text-transform: uppercase;
+	padding-left: .5rem;
+	border-left: 5px solid $color-negative;
+	margin-left: 1rem;
+	/* font-weight: bold; */
   }
 
   .tech_table td:last-child {
-    color: $color-text;
-    font-size: $text-small;
-    vertical-align: middle;
+	color: $color-text;
+	font-size: $text-small;
+	vertical-align: middle;
   }
 
   h2 {
-    color: $color-text;
-    background: $color-secondary;
-    //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
-    text-transform: initial;
-    font-size: 1rem;
+	color: $color-text;
+	font-size: 1rem;
+	//background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
+	text-transform: initial;
+	background: $color-secondary;
   }
 
   .stats_tbl {
-    tr {
-      th:not([colspan="17"]).stats_title {
-        background: $color-secondary;
-        color: white;
-      }
+	tr {
+	  th:not([colspan='17']).stats_title {
+		color: white;
+		background: $color-secondary;
+	  }
 
-      &.Ter td,
-      &.Cat td,
-      &.Xan td,
-      &.Zik td,
-      &.Etd td,
-      &.Kin td,
-      &.Sly td {
-        color: $color-offwhite;
-      }
-    }
+	  &.Ter td,
+	  &.Cat td,
+	  &.Xan td,
+	  &.Zik td,
+	  &.Etd td,
+	  &.Kin td,
+	  &.Sly td {
+		color: $color-offwhite;
+	  }
+	}
 
-    th, td {
-      //background-color: var(--col-panel-light);
-      padding: .15rem .5rem;
-    }
+	th, td {
+	  //background-color: var(--col-panel-light);
+	  padding: .15rem .5rem;
+	}
 
-    th[colspan="17"] {
-      background-color: transparent;
-      color: white;
-      font-size: 1.25rem;
-      text-shadow: 1px 2px 2px black;
-    }
+	th[colspan='17'] {
+	  color: white;
+	  font-size: 1.25rem;
+	  text-shadow: 1px 2px 2px black;
+	  background-color: transparent;
+	}
   }
 }
 
@@ -294,7 +294,7 @@
   background: rgba($color-terran, .3);
 
   &:nth-child(odd) {
-    background: rgba($color-terran, .4);
+	background: rgba($color-terran, .4);
   }
 }
 
@@ -302,7 +302,7 @@
   background: rgba($color-cathaar, .3);
 
   &:nth-child(odd) {
-    background: rgba($color-cathaar, .4);
+	background: rgba($color-cathaar, .4);
   }
 }
 
@@ -310,7 +310,7 @@
   background: rgba($color-xandathrii, .3);
 
   &:nth-child(odd) {
-    background: rgba($color-xandathrii, .4);
+	background: rgba($color-xandathrii, .4);
   }
 }
 
@@ -318,7 +318,7 @@
   background: rgba($color-zikonian, .3);
 
   &:nth-child(odd) {
-    background: rgba($color-zikonian, .4);
+	background: rgba($color-zikonian, .4);
   }
 }
 
@@ -326,7 +326,7 @@
   background: rgba($color-eitraides, .3);
 
   &:nth-child(odd) {
-    background: rgba($color-eitraides, .4);
+	background: rgba($color-eitraides, .4);
   }
 }
 
@@ -334,7 +334,7 @@
   background: rgba($color-kinthia, .3);
 
   &:nth-child(odd) {
-    background: rgba($color-kinthia, .4);
+	background: rgba($color-kinthia, .4);
   }
 }
 
@@ -342,6 +342,6 @@
   background: rgba($color-slythonian, .3);
 
   &:nth-child(odd) {
-    background: rgba($color-slythonian, .4);
+	background: rgba($color-slythonian, .4);
   }
 }
