--- a/scss/components/_mining.scss
+++ b/scss/components/_mining.scss
@@ -2,15 +2,14 @@
    -------------------------------------------------------*/
 #mining,
 #galaxy_fund {
-
   table {
 	max-width: 900px;
 	margin: 1rem auto;
 
 	tr {
 	  td {
-		height: 1.5rem;
 		background: $color-secondary;
+		height: 1.5rem;
 
 		.textlabel {
 		  display: inline-block;
@@ -25,9 +24,9 @@
 		  height: 1.5rem;
 
 		  .textvalue {
+			padding: 0 1rem 0 1.2rem;
 			background-repeat: no-repeat;
 			background-position-y: 1px;
-			padding: 0 1rem 0 1.2rem;
 		  }
 		}
 
@@ -70,11 +69,10 @@
 	.metal,
 	.crystal,
 	.eonium {
-
 	  .textvalue {
+		padding: 0 1rem 0 1.2rem;
 		background-repeat: no-repeat;
 		background-position-y: 1px;
-		padding: 0 1rem 0 1.2rem;
 	  }
 	}
 
@@ -95,7 +93,7 @@
 	margin-bottom: .5rem;
   }
 
-  input[type="number"] {
+  input[type='number'] {
 	padding-right: .1rem;
 	min-width: 3rem;
   }
@@ -111,7 +109,7 @@
 }
 
 #galaxy_fund {
-  form[action^="mining.pl?"] {
+  form[action^='mining.pl?'] {
 	table {
 	  tr {
 		&:first-child {
@@ -126,9 +124,9 @@
 
 	tr {
 	  td {
-		&[colspan="5"] {
-		  background: transparent;
+		&[colspan='5'] {
 		  padding: 1rem 0 0;
+		  background: transparent;
 		}
 	  }
 	}
@@ -148,10 +146,10 @@
   .metal,
   .crystal,
   .eonium {
-	width: 100%;
-	height: 30px;
 	display: block;
 	background-size: contain;
+	width: 100%;
+	height: 30px;
   }
 }
 
