--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -3,8 +3,6 @@
 	> table {
 	  > tbody {
 		> tr {
-
-
 		  &.new {
 			> th,
 			> td {
@@ -122,12 +120,12 @@
 				  th {
 					span {
 					  &:after {
+						vertical-align: sub;
+						content: '';
+						display: inline-block;
 						width: 1rem;
 						height: 1rem;
 						margin-left: .4rem;
-						content: "";
-						display: inline-block;
-						vertical-align: sub;
 					  }
 					}
 
@@ -177,8 +175,8 @@
 
 			&.news_combat_fleet_cap_roids {
 			  td {
-				border-left: 1px solid rgba($color-primary, .3);
 				text-align: center;
+				border-left: 1px solid rgba($color-primary, .3);
 
 				&:first-of-type {
 				  border-left: none;
@@ -186,12 +184,12 @@
 
 				span:first-child {
 				  &:after {
+					vertical-align: sub;
+					content: '';
+					display: inline-block;
 					width: 1rem;
 					height: 1rem;
 					margin-left: .4rem;
-					content: "";
-					display: inline-block;
-					vertical-align: sub;
 				  }
 				}
 
@@ -274,8 +272,8 @@
 
 				&:last-child {
 				  td {
-					border-top: 4px solid $color-background;
 					font-weight: bold;
+					border-top: 4px solid $color-background;
 				  }
 				}
 			  }
@@ -327,9 +325,9 @@
 					&:nth-child(2),
 					&:nth-child(3),
 					&:nth-child(4) {
-					  text-align: center;
 					  font-size: $text-medium;
 					  line-height: 1;
+					  text-align: center;
 					}
 				  }
 
@@ -350,12 +348,12 @@
 					  &:nth-child(3),
 					  &:nth-child(4) {
 						&:after {
+						  vertical-align: sub;
+						  content: '';
+						  display: inline-block;
 						  width: 1rem;
 						  height: 1rem;
 						  margin-left: .4rem;
-						  content: "";
-						  display: inline-block;
-						  vertical-align: sub;
 						}
 					  }
 
@@ -403,7 +401,6 @@
 	}
   }
 }
-
 
 #page_news_entry {
   table {
