--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -2,29 +2,29 @@
    -------------------------------------------------------*/
 .slider_track {
   .slider_slider {
-	height: 4px;
 	line-height: 0;
+	background: rgba($color-primary, .18);
+	width: 110px;
+	height: 4px;
+	border: 1px solid rgba(#000, .5);
+	box-shadow: -1px 1px 5px 0px #000, 0px 0px 1px 1px $color-primary;
 	margin: 7px 4px 7px 4px;
 	position: absolute;
-	width: 110px;
 	z-index: 1;
-	border: 1px solid rgba(#000, .5);
-	background: rgba($color-primary, .18);
-	box-shadow: -1px 1px 5px 0px #000, 0px 0px 1px 1px $color-primary;
   }
 
   .population_slider {
 	background: $color-primary;
 	background: linear-gradient(135deg, $color-primary 25%, $color-secondary 100%);
-	height: 1.25rem;
 	width: 0.6rem;
-	margin-left: 5px;
+	height: 1.25rem;
 	border-top: 1px solid rgba(80, 164, 246, 0.21);
-	border-left: 1px solid rgba(80, 164, 246, 0.21);
-	border-bottom: 1px solid rgba(black, .85);
 	border-right: 1px solid rgba(black, .8);
-	box-shadow: inset 0px -1px 2px 1px rgba(#000, .5), 0px 0px 3px 2px rgba(#000, .3);
+	border-bottom: 1px solid rgba(black, .85);
+	border-left: 1px solid rgba(80, 164, 246, 0.21);
 	border-radius: 6px;
+	box-shadow: inset 0px -1px 2px 1px rgba(#000, .5), 0px 0px 3px 2px rgba(#000, .3);
+	margin-left: 5px;
 
 	&:active {
 	  background: linear-gradient(135deg, #598aad 0%, #000 100%);
@@ -33,8 +33,8 @@
 }
 
 .population_display {
-  font-weight: bold;
   color: $color-text;
+  font-weight: bold;
 }
 
 #population {
@@ -58,9 +58,9 @@
 
 	tr {
 	  &:nth-child(7) th {
+		font-weight: normal;
 		text-align: right;
 		padding: .25rem 1rem;
-		font-weight: normal;
 	  }
 
 	  &:last-child {
@@ -104,8 +104,8 @@
 	}
 
 	table {
-	  margin: 0 auto;
 	  min-width: unset;
+	  margin: 0 auto;
 
 	  tr {
 		th {
@@ -122,16 +122,16 @@
 		td {
 		  background: $color-secondary;
 
-		  &[colspan="4"] {
+		  &[colspan='4'] {
 			background: transparent !important;
 		  }
 
 		  input {
-			&[type="number"] {
+			&[type='number'] {
+			  text-align: center;
+			  padding: 0 !important;
 			  border: 1px solid rgba($color-primary, .5);
 			  transition: ease all .5s;
-			  padding: 0 !important;
-			  text-align: center;
 
 			  &:focus {
 				border: 1px solid $color-primary;
@@ -157,8 +157,8 @@
 	  display: flex;
 
 	  span {
-		display: inline-block;
 		padding: .15rem 1rem;
+		display: inline-block;
 		flex-basis: 50%;
 	  }
 	}
@@ -168,13 +168,13 @@
 	}
 
 	.textvalue {
-	  text-align: left;
 	  font-weight: bold;
+	  text-align: left;
 	}
   }
 
   #tab1 {
-	input[type="submit"] {
+	input[type='submit'] {
 	  margin: 1rem auto;
 	}
   }
